Correcting a spacing issue and clearing up some code comments

--- a/public/styles/pages/home.styl
+++ b/public/styles/pages/home.styl
@@ -24,6 +24,7 @@
 		flex-wrap wrap
 		list-style none
 		padding 0
+		margin 0
 		&:hover > li
 			opacity .8
 			&:nth-child(1)
